<resources>
    <string name="app_name">Grocery</string>
    <string name="action_settings">Settings</string>
    <string name="add_first_item">Your First Grocery</string>
    <string name="popup_enter_grocery">Enter Grocery</string>
    <string name="popup_enter_item_name">Enter Item Name</string>
    <string name="popup_quantity_text">Quantity</string>
    <string name="popup_save_btn_text">Save</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="quantity">Quantity</string>
    <string name="grocery_name">Grocery Name</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="confirm_no_btn_text">No</string>
    <string name="confirm_yes_btn_text">Yes</string>
</resources>
